--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
       "@material-ui/styles/*": ["./material-ui-styles/src/*"],
       "@material-ui/system": ["./material-ui-system/src"],
       "@material-ui/types": ["./material-ui-types"]
-    }
+    },
+    "types": ["mocha", "node", "react"]
   },
   "exclude": ["**/build/"]
 }
