--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@types/autosuggest-highlight": "^3.1.0",
     "@types/chai": "^4.1.7",
     "@types/enzyme": "^3.1.4",
+    "@types/jsdom": "^12.2.3",
     "@types/lodash": "^4.14.123",
     "@types/mocha": "^5.2.7",
     "@types/react": "^16.8.10",
