--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@emotion/core": "^10.0.0",
     "@emotion/styled": "^10.0.0",
     "@material-ui/pickers": "^3.1.1",
+    "@testing-library/react": "^8.0.1",
     "@trendmicro/react-interpolate": "^0.5.5",
     "@types/autosuggest-highlight": "^3.1.0",
     "@types/chai": "^4.1.7",
@@ -172,7 +173,6 @@
     "react-select": "^2.0.0",
     "react-swipeable-views": "^0.13.0",
     "react-test-renderer": "^16.8.5",
-    "react-testing-library": "^7.0.0",
     "react-text-mask": "^5.0.2",
     "react-virtualized": "^9.21.0",
     "react-window": "^1.7.1",
