Fix "test_types" is the name of 0 other jobs

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -161,7 +161,7 @@ workflows:
       - test_static:
           requires:
             - checkout
-      - test_material-ui-x:
+      - test_types:
           requires:
             - checkout
       - test_browser:
