--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@babel/node": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "^7.2.1",
     "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
+    "@babel/plugin-syntax-class-properties": "^7.2.0",
     "@babel/plugin-transform-object-assign": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.2.0",
@@ -195,6 +196,7 @@
     "styled-components": "^4.1.1",
     "tslint": "5.14.0",
     "typescript": "3.2.2",
+    "typescript-to-proptypes": "^1.0.0",
     "url-loader": "^1.0.1",
     "vrtest": "^0.2.0",
     "webfontloader": "^1.6.28",
