--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,16 +27,18 @@ steps:
       npm version 0.0.0-canary.$(Build.SourceVersion) --no-git-tag-version
       npm pack
       mv *.tgz ../../../
+    condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
     displayName: 'create @material-ui/core canary distributable'
 
   - task: S3Upload@1
     inputs:
       regionName: 'eu-central-1'
-      bucketName: 'eps1lon-mui-scripts'
+      bucketName: 'eps1lon-material-ui'
       globExpressions: '*.tgz'
       targetFolder: 'artifacts/$(Build.SourceBranchName)/$(Build.SourceVersion)'
       filesAcl: 'public-read'
     displayName: "Upload distributables to S3"
+    condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
     env:
       AWS_ACCESS_KEY_ID: $(AWS_ACCESS_KEY_ID)
       AWS_SECRET_ACCESS_KEY: $(AWS_SECRET_ACCESS_KEY)
