Use azure artifacts for PRs

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,6 +43,12 @@ steps:
       AWS_ACCESS_KEY_ID: $(AWS_ACCESS_KEY_ID)
       AWS_SECRET_ACCESS_KEY: $(AWS_SECRET_ACCESS_KEY)
 
+  - task: PublishPipelineArtifact@0
+    inputs:
+      pathtoPublish: '$(Build.ArtifactStagingDirectory)'
+      artifactName: 'canaries'
+      targetPath: 'material-ui-core-0.0.0-canary.$(Build.SourceVersion).tgz'
+
   - script: |
       yarn docs:build
     displayName: 'build docs'
