Fix target path doesn't exist

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,8 +26,7 @@ steps:
       cd packages/material-ui/build
       npm version 0.0.0-canary.$(Build.SourceVersion) --no-git-tag-version
       npm pack
-      mv *.tgz ../../../material-ui-core.tgz
-    condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
+      mv material-ui-core-0.0.0-canary.$(Build.SourceVersion).tgz ../../../material-ui-core.tgz
     displayName: 'create @material-ui/core canary distributable'
 
   - task: S3Upload@1
