--- a/docs/package.json
+++ b/docs/package.json
@@ -41,6 +41,7 @@
     "@zeit/next-typescript": "^1.1.1",
     "address": "^1.0.3",
     "ast-types": "^0.12.4",
+    "autoprefixer": "^9.0.0",
     "autosuggest-highlight": "^3.1.1",
     "classnames": "^2.2.6",
     "clean-css": "^4.1.11",
