--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "version": "4.3.0",
   "private": true,
   "scripts": {
-    "proptypes": "ts-node ./packages/material-ui/scripts/generateProptypes.ts",
+    "proptypes": "ts-node --skip-project ./packages/material-ui/scripts/generateProptypes.ts",
     "deduplicate": "node scripts/deduplicate.js",
     "argos": "argos upload test/regressions/screenshots/chrome --token $ARGOS_TOKEN",
     "docs:api": "rimraf ./docs/pages/api && cross-env BABEL_ENV=test babel-node ./docs/scripts/buildApi.js ./packages/material-ui/src ./docs/pages/api && cross-env BABEL_ENV=test babel-node ./docs/scripts/buildApi.js ./packages/material-ui-lab/src ./docs/pages/api",
