--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.2.0",
-    "@babel/core": "^7.2.2",
+    "@babel/core": "^7.5.4",
     "@babel/node": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "^7.2.1",
     "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
@@ -133,6 +133,7 @@
     "yarn-deduplicate": "^1.1.1"
   },
   "resolutions": {
+    "**/@babel/core": "^7.5.4",
     "**/hoist-non-react-statics": "^3.2.1"
   },
   "nyc": {
