Force single version of @babel/plugin-proposal-class-properties

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@babel/cli": "^7.2.0",
     "@babel/core": "^7.5.4",
     "@babel/node": "^7.2.2",
-    "@babel/plugin-proposal-class-properties": "^7.2.1",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
     "@babel/plugin-transform-object-assign": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.2.0",
@@ -134,6 +134,7 @@
   },
   "resolutions": {
     "**/@babel/core": "^7.5.4",
+    "**/@babel/plugin-proposal-class-properties": "^7.5.5",
     "**/hoist-non-react-statics": "^3.2.1"
   },
   "nyc": {
