--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@babel/core": "^7.5.4",
     "@babel/node": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
     "@babel/plugin-transform-object-assign": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.2.0",
@@ -135,6 +135,7 @@
   "resolutions": {
     "**/@babel/core": "^7.5.4",
     "**/@babel/plugin-proposal-class-properties": "^7.5.5",
+    "**/@babel/plugin-proposal-object-rest-spread": "^7.4.4",
     "**/hoist-non-react-statics": "^3.2.1"
   },
   "nyc": {
