--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
     "@babel/plugin-transform-object-assign": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/plugin-transform-runtime": "~7.4.4",
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
@@ -136,6 +136,7 @@
     "**/@babel/core": "^7.5.4",
     "**/@babel/plugin-proposal-class-properties": "^7.5.5",
     "**/@babel/plugin-proposal-object-rest-spread": "^7.4.4",
+    "**/@babel/plugin-transform-runtime": "~7.4.4",
     "**/hoist-non-react-statics": "^3.2.1"
   },
   "nyc": {
