--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
     "@babel/plugin-transform-object-assign": "^7.2.0",
     "@babel/plugin-transform-runtime": "~7.4.4",
-    "@babel/preset-env": "^7.2.0",
+    "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
     "@testing-library/react": "^8.0.2",
@@ -137,6 +137,7 @@
     "**/@babel/plugin-proposal-class-properties": "^7.5.5",
     "**/@babel/plugin-proposal-object-rest-spread": "^7.4.4",
     "**/@babel/plugin-transform-runtime": "~7.4.4",
+    "**/@babel/preset-env": "^7.5.5",
     "**/hoist-non-react-statics": "^3.2.1"
   },
   "nyc": {
