--- a/package.json
+++ b/package.json
@@ -138,6 +138,7 @@
     "**/@babel/plugin-proposal-object-rest-spread": "^7.4.4",
     "**/@babel/plugin-transform-runtime": "~7.4.4",
     "**/@babel/preset-env": "^7.5.5",
+    "**/@babel/preset-react": "^7.0.0",
     "**/hoist-non-react-statics": "^3.2.1"
   },
   "nyc": {
